--- a/Mywebpage.html
+++ b/Mywebpage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Styles.css">
 </head>
 <body><h1>INTODUCTION</h1>
-    <img src="C:\Users\hemam\Downloads\virat.jpg" alt="King">
+    <img src="virat.jpg" alt="King">
 <p><br><b>Name</b>:Hema<br><br><b>Qualification</b>:B.E CSE(Final year)<br><br><b>Contact Information</b>:782345689<br><br><b>Email Address:<a href="file:///C:/Users/hema/test.html">hemamurugeasan21@gmail.com</a></b></p><br>
 <p></p>
 <h1>ABOUT ME</h1>
