--- a/Mywebpage.html
+++ b/Mywebpage.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -7,7 +6,9 @@
     <link rel="stylesheet" href="Styles.css">
 </head>
 <body><h1>INTODUCTION</h1>
-    <img src="virat.jpg" alt="King">
+    <div class="cointainer">
+    <img src="virat.jpg" alt="King"title="virat kolhi">
+    <div class="text">
 <p><br><b>Name</b>:Hema<br><br><b>Qualification</b>:B.E CSE(Final year)<br><br><b>Contact Information</b>:782345689<br><br><b>Email Address:<a href="file:///C:/Users/hema/test.html">hemamurugeasan21@gmail.com</a></b></p><br>
 <p></p>
 <h1>ABOUT ME</h1>
@@ -21,25 +22,44 @@ impactful solutions.
 </p>   
 <h1>SKILLS</h1>  
 <li>Python</li>
-   <li>Web Designing(Html&amp;CSS)</li>
+   <li>Data structure</li>
     <li>Data Analytics(PowerBI)</li>
     <li>MS Office</li>
-    <li>UI/UX Designing(Figma,Adobe Express)</li>
-    <li>Graphic Design(Canva)</li>
+    <li>Front end developer</li>
+    <li>Cloud network engineer</li>
     <h1>ENDEAVOUR PROJECTS</h1>
-    
-        <img src="./C:\Users\hemam\Downloads.jpg">
     <ul>
 <b>1.</b>Card Fraud Detection in IBM<br>
 <b>2.</b>Coffee Shop Sales and Inventory Analysis (TOOL - Power BI)<br>
 <b>3.Figma Design Projects:</b><br>
 <ul>
-    <li>Food Ordering App</li>
-    <li>Movie Ticket Booking App</li>
-    <li>Pizza Landing Page</li>
-    <li>Nike Shoe Landing Page</li>
-    <li>E-commerse Website</li>
-    </ul>    
+    <li>Event Booking & Management App</li>
+    <li>Smart Grocery List App</li>
+    <li>AI Chatbot for Customer Support</li>
+    <li>Blood Donation & Availability Finder</li>
+    <li>AI-Powered Resume Builder</li>
+    </ul>
+    <h2>Contact Me, I'll Reach You Soon...</h2><br><br>
+    <form id="form1">
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname">
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname"><br><br>
+        <label for="mailid">Mail ID:</label>
+        <input type="text" id="mailid" name="lname"><br><br>
+        <input type="checkbox" id="consent" name="consent" value="Accepted">
+        <label for="consent"> I Agree to share the filled information with this website holder and use it for any
+            research purposes.</label><br>
+    </form>
+    <br>
+    <br>
+    <button type="submit" form="form1" value="Submit">Submit</button>
+</div>
+<script src="script.js"></script>
+</body>
+</html>  
+
+
 
     
 
