--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>My Web Page</title>
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="web.css">
 </head>
-<body><h1>INTODUCTION</h1>
+<body>
     <div class="cointainer">
-    <img src="virat.jpg" alt="King"title="virat kolhi">
-    <div class="text">
-<p><br><b>Name</b>:Hema<br><br><b>Qualification</b>:B.E CSE(Final year)<br><br><b>Contact Information</b>:782345689<br><br><b>Email Address:<a href="file:///C:/Users/hema/test.html">hemamurugeasan21@gmail.com</a></b></p><br>
-<p></p>
-<h1>ABOUT ME</h1>
-      <p>  I am Hema I'm currently pursuing a B.E CSE final year in PMC Tech. 
-        Passionate Computer Science student with a flair for
-innovative problem-solving and a deep interest in emerging
-technologies. Seeking an opportunity to contribute to
-innovative projects and collaborate with a forward-thinking
-team to drive technological advancements and deliver
-impactful solutions.
-</p>   
-<h1>SKILLS</h1>  
-<li>Python</li>
-   <li>Data structure</li>
-    <li>Data Analytics(PowerBI)</li>
-    <li>MS Office</li>
-    <li>Front end developer</li>
-    <li>Cloud network engineer</li>
-    <h1>ENDEAVOUR PROJECTS</h1>
-    <ul>
-<b>1.</b>Card Fraud Detection in IBM<br>
-<b>2.</b>Coffee Shop Sales and Inventory Analysis (TOOL - Power BI)<br>
-<b>3.Figma Design Projects:</b><br>
-<ul>
-    <li>Event Booking & Management App</li>
-    <li>Smart Grocery List App</li>
-    <li>AI Chatbot for Customer Support</li>
-    <li>Blood Donation & Availability Finder</li>
-    <li>AI-Powered Resume Builder</li>
-    </ul>
+        <img src="girl.jpg" alt="sweety" title="hema">
+        <div class="text">
+            <h1>INTRODUCTION</h1>
+            <p><b>Name</b>: Hema<br><br><b>Qualification</b>: B.E CSE (Final year)<br><br><b>Contact Information</b>: 782345689<br><br><b>Email Address</b>: <a href="file:///C:/Users/hema/test.html">hemamurugeasan21@gmail.com</a></p>
+
+            <h1>ABOUT ME</h1>
+            <p>I am Hema. I'm currently pursuing a B.E CSE final year in PMC Tech. Passionate Computer Science student with a flair for innovative problem-solving and a deep interest in emerging technologies. Seeking an opportunity to contribute to innovative projects and collaborate with a forward-thinking team to drive technological advancements and deliver impactful solutions.</p>
+
+            <h1>SKILLS</h1>
+            <li>Python</li>
+            <li>Data structure</li>
+                <li>Data Analytics (PowerBI)</li>
+                <li>MS Office</li>
+                <li>Front end developer</li>
+                <li>Cloud network engineer</li>
+            </ul>
+        </div>
+    </div>
+
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <h2>ENDEAVOUR PROJECTS</h2>
+            <div class="portfolio-grid">
+                <div class="project">
+                    <h3>E-commerce Platform</h3>
+                    <p>Developed a full-featured e-commerce platform with user authentication, product management, and payment integration. Focused on scalability and performance.</p>
+                </div>
+                <div class="project">
+                    <h3>Interactive Dashboard</h3>
+                    <p>Designed and implemented an interactive data dashboard for visualizing complex datasets. Emphasized user experience and data clarity.</p>
+                </div>
+                <div class="project">
+                    <h3>Personal Blog</h3>
+                    <p>Created a personal blog with a custom CMS, allowing for easy content creation and management. Designed for optimal readability and engagement.</p>
+                </div>
+                </div>
+        </div>
+    </section>
+
     <div class="container">
         <h2>Get in Touch – I'll Respond Soon!</h2>
         <form id="contactForm">
@@ -62,10 +69,6 @@ impactful solutions.
         </form>
     </div>
 
-    <script src="script.js"></script>
-
+    <script src="web.js"></script>
 </body>
 </html>
-
-    
-
